# img-compression

calibration/: calib_intrinsic.py
data/: videosets.txt
python/: bag2mkv.py  compare.py  compression.py  dataloader.py  h264.py  huffyuv.py  main.py  makeitraw.py  remuxing.py  verifying.py  videosets.txt  visualize.py
rawcompr/: rawVideo.py
rawcompr/src/: libav.cpp  main.cpp
snappy/: CMakeLists.txt
snappy/results/: test.snappy
snappy/src/: snappy.cpp  zlib.cpp
zstdpp/: CMakeLists.txt
zstdpp/src/: zstd.cpp
